[tool.poetry]
name = "codoc-in-md"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "codoc_in_md"}]

[tool.poetry.dependencies]
python = "~3.11"
reflex = "0.8.24.post1"
reflex-monaco = "*"
pygments = ">=2.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
